# signalkit

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/signalkit-cli/: Cargo.toml
crates/signalkit-cli/src/: main.rs  serve.rs
crates/signalkit-core/: Cargo.toml
crates/signalkit-core/src/: domain.rs  error.rs  lib.rs  live.rs  paths.rs
crates/signalkit-core/src/desktop/: db.rs  keychain.rs  mod.rs
crates/signalkit-tauri/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/signalkit-tauri/src/: App.tsx  api.ts  index.tsx  styles.css
crates/signalkit-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/signalkit-tauri/src-tauri/capabilities/: default.json
crates/signalkit-tauri/src-tauri/src/: main.rs
packaging/aur/: README.md
packaging/aur/signalkit-bin/: PKGBUILD
