[workspace]
resolver = "2"
members = [
    "crates/signalkit-core",
    "crates/signalkit-cli",
    "crates/signalkit-tauri/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/rotkonetworks/signalkit"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "rt", "macros", "fs", "io-util", "io-std", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Desktop DB read path
rusqlite = { git = "https://github.com/whisperfish/rusqlite", rev = "2a42b3354c9194700d08aa070f70a131a470e7dc", features = ["bundled-sqlcipher"] }
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
pbkdf2 = { version = "0.12", features = ["std"] }
sha1 = "0.10"
hex = "0.4"
dirs = "5"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Presage / Signal live
presage = { git = "https://github.com/whisperfish/presage", rev = "22251cc2d4503240df82aa27f1ba226324c05a29" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", rev = "22251cc2d4503240df82aa27f1ba226324c05a29" }
futures = "0.3"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
qrcode = { version = "0.14", default-features = false }
time = { version = "0.3", default-features = false, features = ["std", "formatting", "macros"] }
rand = "0.8"
base64 = "0.22"

# Required by libsignal — build fails without this patch.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
libsqlite3-sys = { version = "0.36.0", git = "https://github.com/whisperfish/rusqlite", rev = "2a42b3354c9194700d08aa070f70a131a470e7dc" }
