[package]
name = "signalkit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "signalkit"
path = "src/main.rs"

[dependencies]
signalkit-core = { path = "../signalkit-core" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
qrcode.workspace = true
time.workspace = true
