[package]
name = "signalkit-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "signalkit-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
signalkit-core = { path = "../../signalkit-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
